포스트 상세페이지 ui&로직 구현 & 카테고리 기능

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,8 +126,16 @@ table {
   border-spacing: 0;
 }
 
-.__next {
+#__next {
   position: relative;
+}
+
+.my-post-style strong {
+  font-weight: bold;
+}
+
+.my-post-style em {
+  font-style: italic;
 }
 
 /* 
